--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    compileOnly("com.google.auto.factory:auto-factory:1.0-beta6")
+    annotationProcessor("com.google.auto.factory:auto-factory:1.0-beta6")
     compileOnly 'org.projectlombok:lombok:1.18.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
