id 일 경우 타입을 Long으로 IDS 일 경우 타입을 List<Long> 으로 만듬

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,6 @@ project(':processor'){
 project(':sample'){
     dependencies{
         compile project(':annotation')
-        compile project(':processor')
+        compileOnly project(':processor')
     }
 }
